Optimize warnings